# entity-cli

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
crates/api/: Cargo.toml
crates/api/src/: bridge.rs  docs.rs  lib.rs  session.rs  setup.rs  state.rs  tests.rs  ui.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  loader.rs  model.rs  registry.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/executors/: Cargo.toml
crates/executors/src/: bridge.rs  components.rs  docs.rs  lib.rs  setup.rs  tests.rs  util.rs
crates/executors/src/tests/: bridge.rs  common.rs  components.rs  docs.rs  mod.rs  performance.rs
npm/entity-cli/: README.md  package.json
npm/entity-cli/scripts/: postinstall.js
npm/entityauth-cli/: README.md  package.json
npm/entityauth-cli/packs/entity-auth/components/: nodes.json
npm/entityauth-cli/packs/entity-auth/docs/: nodes.json
npm/entityauth-cli/scripts/: postinstall.js
packs/entity-auth/docs/: nodes.json
scripts/: coverage-lcov.sh  coverage.sh
