[workspace]
members = [
    "crates/core",
    "crates/engine",
    "crates/executors",
    "crates/api",
    "crates/bin",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.11"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
camino = "1.1"
clap = { version = "4.5", features = ["derive"] }
indexmap = "2.2"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2.5"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tempfile = "3"

