[package]
name = "api"
version = "0.0.11"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
entity_core = { path = "../core" }
executors = { path = "../executors" }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { workspace = true }
tempfile = { workspace = true }
hyper = { version = "1", default-features = false, features = ["http1", "http2", "client", "server"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
