[package]
name = "engine"
version = "0.0.11"
edition = "2024"

[dependencies]
entity_core = { path = "../core" }
executors = { path = "../executors" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
