[package]
name = "executors"
version = "0.0.11"
edition = "2024"

[dependencies]
entity_core = { path = "../core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

[dev-dependencies]
tempfile = "3"
